--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "name": "scripts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "deploy.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "module",
-  "dependencies": {
-    "@clack/prompts": "^1.0.0",
-    "chalk": "^5.6.2",
-    "execa": "^9.6.1",
-    "terminal-link": "^5.0.0"
-  },
-  "engines": {
-    "node": ">=20.5.0"
-  }
+    "name": "skyhook",
+    "version": "1.0.0",
+    "description": "Interactive CLI for Cloud Composer DAG deployment",
+    "main": "src/index.js",
+    "bin": {
+        "skyhook": "./src/index.js"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "type": "module",
+    "dependencies": {
+        "@clack/prompts": "^1.0.0",
+        "chalk": "^5.6.2",
+        "execa": "^9.6.1",
+        "terminal-link": "^5.0.0"
+    },
+    "engines": {
+        "node": ">=20.5.0"
+    },
+    "devDependencies": {
+        "prettier": "^3.8.1"
+    }
 }
