--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@hraza01/skyhook",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "description": "Interactive CLI for Cloud Composer DAG deployment",
     "main": "src/index.js",
     "bin": {
@@ -28,6 +28,8 @@
         "@clack/prompts": "^1.0.0",
         "chalk": "^5.6.2",
         "execa": "^9.6.1",
+        "figlet": "^1.10.0",
+        "ora": "^9.3.0",
         "terminal-link": "^5.0.0"
     },
     "engines": {
