--- a/vscode-example/tasks.json
+++ b/vscode-example/tasks.json
@@ -9,7 +9,7 @@
             "presentation": {
                 "echo": true,
                 "reveal": "always",
-                "focus": false,
+                "focus": true,
                 "panel": "dedicated",
                 "showReuseMessage": true,
                 "clear": true
